--- a/ponto/templates/ponto/dashboard.html
+++ b/ponto/templates/ponto/dashboard.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="container py-5">
+<div class="py-5">
     <div class="row justify-content-center">
         <div class="col-lg-7 col-md-9 col-12">
             <div class="card shadow-lg border-0 rounded-4 overflow-hidden">
