--- a/ponto/templates/ponto/relatorio.html
+++ b/ponto/templates/ponto/relatorio.html
@@ -13,7 +13,7 @@
 
 <div class="container py-5">
     <!-- Formulário de filtro de período -->
-    <div class="row justify-content-center mb-4">
+    <div class="row justify-content-center mb-4 filtro-relatorio">
         <div class="col-12 col-lg-10">
             <div class="card shadow-sm border-0">
                 <div class="card-body">
